-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.14.0
-
3
-
9223372036854775807
Instead of checking everywhere in the code whether kernel defines
__vfs_getxattr/__vfs_setxattr/__vfs_removexattr
define compat macros to handle this in lustre_compat.h.
- is related to
-
LU-13465 Interop 2.12 <-> master sanity test_27A: lfs setstripe: setstripe error for '/mnt/lustre': Unknown error 524
-
- Resolved
-